Fix image filenames - use correct uppercase IMG_ prefix

--- a/mainapp/templates/home.html
+++ b/mainapp/templates/home.html
@@ -479,7 +479,7 @@
         <div class="features-grid">
             <div class="feature-card">
                 <div class="member-image">
-                    <img src="{% static 'img_5059.jpg' %}" alt="Terence Nwaeke">
+                    <img src="{% static 'IMG_5059.jpg' %}" alt="Terence Nwaeke">
                 </div>
                 <h3>Terence Nwaeke</h3>
                 <p style="color: #e94560; font-weight: 600;">Vorsitzender für IT und Social Media</p>
@@ -487,7 +487,7 @@
             </div>
             <div class="feature-card">
                 <div class="member-image">
-                    <img src="{% static 'img_5060.jpg' %}" alt="Flora Kohlbacher">
+                    <img src="{% static 'IMG_5060.jpg' %}" alt="Flora Kohlbacher">
                 </div>
                 <h3>Flora Kohlbacher</h3>
                 <p style="color: #e94560; font-weight: 600;">Vorsitzende für Öffentlichkeitsarbeit und Events</p>
@@ -495,7 +495,7 @@
             </div>
             <div class="feature-card">
                 <div class="member-image">
-                    <img src="{% static 'img_5061.jpg' %}" alt="Phillip Auber">
+                    <img src="{% static 'IMG_5061.jpg' %}" alt="Phillip Auber">
                 </div>
                 <h3>Phillip Auber</h3>
                 <p style="color: #e94560; font-weight: 600;">Stv. Vorsitzender für Finanzen und Organisation</p>
